update GA import

--- a/tf1/NN_fixed_para_validation_batchsize_V3_GA.ipynb
+++ b/tf1/NN_fixed_para_validation_batchsize_V3_GA.ipynb
@@ -434,10 +434,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ga\n",
-    "# GA\n",
-    "from GA.GA import *\n",
-    "\n",
+    "import sys\n",
+    "sys.path.append('../GA')\n",
+    "from GA import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "args_GA = {\n",
     "    'sol_per_pop': 10,\n",
     "    'num_parents_mating': 5,\n",
